Building projects portion

--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -14,3 +14,13 @@
   justify-content: space-evenly;
   color: white;
 }
+.projects_grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 0;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  margin: auto;
+}
