--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   top: 0;
-  background-color: white;
+  background-color: #457b9d;
   height: 75px;
 }
 
