--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,4 +1,4 @@
-.project_details {
+.project_cell:hover > .project_details {
   background-color: rgba(0, 0, 0, 0.632);
   width: 100%;
   height: 100%;
@@ -6,11 +6,24 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  visibility: visible;
+  text-align: center;
+  opacity: 1;
+}
+
+.project_details {
+  transition: opacity 0.5s ease;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   text-align: center;
 }
+
 .click_icon:hover {
-  color: green;
+  color: #457b9d;
 }
 
 .project_modal {
@@ -20,10 +33,19 @@
   align-items: center;
 }
 
-.project_header {
+.modal_header {
   text-align: center;
+  background-color: #f1faee !important;
+}
+
+.modal_content {
+  background-color: #f1faee !important;
 }
 
 .project_icons {
   padding-left: 25%;
+}
+
+.modal_style {
+  background-color: green !important;
 }
