--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -58,7 +58,7 @@
   color: #f1faee;
 }
 .click_more:hover {
-  color: #457b9d;
+  color: #1d3557;
 }
 .about_textboxes {
   font-size: 30px !important;
@@ -94,6 +94,15 @@
   }
   #about {
     flex-direction: column;
+  }
+
+  .projects_grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    padding: 30px;
   }
   .headshot {
     max-height: 150px;
