--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,13 +4,15 @@
   justify-content: space-between;
   align-items: center;
   top: 0;
-  background-color: #457b9d;
+  background-color: #f1faee;
   height: 75px;
   border-bottom: 1px solid white;
 }
 
 .header_bar > h2 {
   padding-left: 40px;
+  align-content: center;
+  color: white !important;
 }
 .menu_items {
   display: flex;
@@ -23,11 +25,6 @@
   }
   h2 {
     font-size: 25px !important;
-  }
-  .menu_items {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
   }
 }
 
