--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -78,11 +78,13 @@
     font-size: 12px !important;
   }
   #about {
+    display: flex;
     flex-direction: column;
   }
   .headshot {
     height: 150px;
     width: 150px;
+    position: relative;
   }
   .projects_grid {
     display: flex;
@@ -102,6 +104,7 @@
     font-size: 10px !important;
   }
   #about {
+    display: flex;
     flex-direction: column;
   }
 
@@ -114,7 +117,7 @@
     padding: 30px;
   }
   .headshot {
-    min-height: 100px;
-    min-width: 100px;
+    height: 300px;
+    width: 300px;
   }
 }
